# merak

./: .gitignore  1.json  CHANGELOG.md  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  setup.py
benchmark/: .gitignore  CMakeLists.txt  pb_json_bench.cc
benchmark/proto/: addressbook.proto
cmake/: merak_config.cmake.in  merak_deps.cmake
examples/: CMakeLists.txt
examples/json/: CMakeLists.txt  archiver.cc  archiver.h  archivertest.cc  capitalize.cc  condense.cc  filterkey.cc  filterkeydom.cc  jsonx.cc  lookaheadparser.cc  messagereader.cc  parsebyparts.cc  pretty.cc  schemavalidator.cc  serialize.cc  simpledom.cc  simplepullreader.cc  simplereader.cc  sortkeys.cc  traverseaspointer.cc  tutorial.cc
kmcmake/tools/: default_setting.cmake  git_commit.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto.cmake  kmcmake_cc_test.cmake  simd_detect.cmake
merak/: CMakeLists.txt  container_traits.h  flat_handler.h  flat_value.h  flatten.h  json.h  json_handler.h  options.h  protobuf.h  protokv.h
merak/flatten/: flat_key.h  flat_pb.cc  flat_pb.h  handler.h  json_to_flat.cc  json_to_flat.h  pb_to_flat.cc  pb_to_flat.h
merak/json/: allocators.h  cursorstreamwrapper.h  document.h  document_internal.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  json_internal.h  memorybuffer.h  memorystream.h  parser.h  pointer.h  prettywriter.h  reader.h  schema.h  std_input_stream.h  std_output_stream.h  stream.h  stringbuffer.h  uri.h  writer.h
merak/json/error/: en.h  error.h
merak/json/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
merak/json/msinttypes/: inttypes.h  stdint.h
merak/proto/: descriptor.cc  descriptor.h  encode_decode.cc  encode_decode.h  json_to_pb.cc  json_to_pb.h  pb_to_flat.cc  pb_to_flat.h  pb_to_json.cc  pb_to_json.h  utility.h
merak/utility/: streams.cc  streams.h  zero_copy_stream_reader.h  zero_copy_stream_writer.h
tests/: CMakeLists.txt  flat_test.cc  mock_test.cc  protobuf_json_test.cc  repeated_field_test.cc  traits_test.cc
tests/data/: paths.h.in
tests/json/: CMakeLists.txt  allocators_test.cc  biginteger_test.cc  clzll_test.cc  cursorstreamwrapper_test.cc  document_test.cc  dtoa_test.cc  encodedstream_test.cc  encodings_test.cc  filestream_test.cc  fwd_test.cc  itoa_test.cc  jsonchecker_test.cc  platform_test.cc  pointer_test.cc  prettywriter_test.cc  reader_test.cc  regex_test.cc  schema_test.cc  simd_test.cc  std_input_stream_test.cc  std_output_stream_test.cc  strfunc_test.cc  stringbuffer_test.cc  strtod_test.cc  unit_test.cc  unittest.h  uri_test.cc  value_test.cc  writer_test.cc
tests/pertf/: CMakeLists.txt  json_test.cc  misc_test.cc  perf_test.cc  perftest.h  platform_test.cc  schema_test.cc
tests/proto/: addressbook.proto  addressbook1.proto  addressbook_encode_decode.proto  addressbook_map.proto  flat2_test.proto  flat3_test.proto  message.proto  repeated.proto
